database connection and settings

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>jfoenix</artifactId>
             <version>9.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>8.4.1.jre14</version>
+        </dependency>
     </dependencies>
 
     <properties>
