--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,6 @@ fabric.properties
 hs_err_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java
+
+#Data base connection info
+/connection/ConnectionInfo.settings
